--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   application:
-    name: mod-spring-template
+    name: mod-requests-mediated
   datasource:
     url: ${DB_URL}
     username: ${DB_USERNAME}
