--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,7 @@ folio:
     validation:
       enabled: true
   environment: ${ENV:folio}
-  okapi-url: ${OKAPI_URL:http://localhost:9130}
+  okapi-url: ${OKAPI_URL:http://okapi:9130}
 management:
   endpoints:
     web:
