MODREQMED-9 update schema

--- a/src/main/resources/swagger.api/schemas/mediatedRequests.yaml
+++ b/src/main/resources/swagger.api/schemas/mediatedRequests.yaml
@@ -6,7 +6,7 @@ MediatedRequests:
       description: A list of mediated requests
       type: array
       items:
-        $ref: "mediatedRequest.yaml#/MediatedRequest"
+        $ref: './mediatedRequest.yaml#/MediatedRequest'
     totalRecords:
       description: Total number of mediated requests
       type: integer
