MODREQMED-10 Fix item status, metadata user IDs

--- a/src/main/resources/swagger.api/schemas/mediatedRequest.yaml
+++ b/src/main/resources/swagger.api/schemas/mediatedRequest.yaml
@@ -197,7 +197,7 @@ MediatedRequest:
           type: string
         status:
           description: Status of the item
-          default: Checked out
+          type: string
         callNumber:
           description: Call number of the item
           type: string
