MODREQMED-10 Add confirmed request ID

--- a/src/main/resources/swagger.api/schemas/mediatedRequest.yaml
+++ b/src/main/resources/swagger.api/schemas/mediatedRequest.yaml
@@ -311,6 +311,9 @@ MediatedRequest:
           description: Whether pickup service point is a pickup location
           type: boolean
       additionalProperties: false
+    confirmedRequestId:
+      description: Confirmed circulation request ID
+      $ref: 'uuid.yaml'
     searchIndex:
       description: Request fields used for search
       type: object
