MODREQMED-10 Add Sonar exclusion

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <sonar.exclusions>
       <!-- define sonar exclusions here -->
       src/main/java/org/folio/template/FolioSpringTemplateApplication.java
+      src/main/java/org/folio/mr/domain/mapper/MediatedRequestMapper.java
     </sonar.exclusions>
     <argLine/>
 
